# StellarKraal-

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  .trivyignore  .upptimerc.yml  ACCESSIBILITY_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DARK_MODE_AUDIT.md  FEATURES_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_117_118_121_128.md  Makefile  PR_DESCRIPTIONS.md  PUSH_SUCCESS.md  README.md  SECURITY.md  STAGING.md  TODO.md  TRANSACTION_HISTORY_FEATURE.md  TRANSACTION_INTEGRATION_GUIDE.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  env.example  openapi-idempotency.yaml  openapi-pagination.yaml  package-lock.json  package.json  server.js  stellarkreal  tatus
.github/: dependabot.yml  (+1 more)
contracts/stellarkraal/: Cargo.toml
contracts/stellarkraal/fuzz/: Cargo.toml
contracts/stellarkraal/fuzz/fuzz_targets/: health_factor.rs  interest_rate.rs  loan_request.rs
contracts/stellarkraal/src/: lib.rs  test_health_factor.rs  tests.rs
contracts/stellarkraal/src/transfer_collateral/: mod.rs
contracts/stellarkraal/test_snapshots/tests/: bench_health_factor_instruction_count.1.json  bench_liquidate_instruction_count.1.json  bench_repay_loan_instruction_count.1.json  bench_repay_loan_instruction_count.2.json  bench_request_loan_instruction_count.1.json  bench_request_loan_instruction_count.2.json  bench_request_loan_instruction_count.3.json  prop_health_factor_post_repayment.1.json  prop_health_factor_post_repayment.10.json  prop_health_factor_post_repayment.100.json  (+1125 more)
(+543 files in other folders)
